--- a/Usine/EcoDycoV1/templates/jeu/game.html
+++ b/Usine/EcoDycoV1/templates/jeu/game.html
@@ -7,33 +7,48 @@
 </head>
 
 <body>
-     <!-- Bouton pour ouvrir le pop-up -->
+    <h1>Jeu de gestion forestière</h1>
+    <p>Quantité de forêt : <span id="forest-quantity">{{ forest_quantity }}</span></p>
+    <p>Quantité de bois : <span id="wood-quantity">{{ wood_quantity }}</span></p>
+    <!-- Bouton pour ouvrir le pop-up -->
     <button id="open-woodcutting-popup">Couper du bois</button>
 
     <!-- Pop-up -->
-    <div id="woodcutting-popup" style="display:none;">
-        <p>Veuillez choisir un nombre entre 0 et 100:</p>
-        <select id="woodcutting-number-selector">
-            {% for i in numbers %}
-                <option value="{{ i }}">{{ i }}</option>
-            {% endfor %}
-        </select>
+    <div id="woodcutting-popup" class="popup" style="display:none;">
+        <p>Veuillez entrer un nombre entre 0 et 100:</p>
+        <input id="woodcutting-number-input" type="number" min="0" max="100">
         <button id="submit-woodcutting-number">Soumettre</button>
     </div>
 
-<script>
+    <script>
         $(document).ready(function() {
-            // Code JavaScript existant
-            // ...
-
             // Nouveau code pour le pop-up couper du bois
             $("#open-woodcutting-popup").click(function() {
                 $("#woodcutting-popup").show();
             });
 
             $("#submit-woodcutting-number").click(function() {
-                const selectedWoodcuttingNumber = $("#woodcutting-number-selector").val();
+                const selectedWoodcuttingNumber = $("#woodcutting-number-input").val();
                 console.log("Nombre de bois à couper sélectionné:", selectedWoodcuttingNumber);
+
+                $.ajax({
+                    url: '{% url "game_action" "8" %}',
+                    method: 'POST',
+                    data: {
+                        'woodcutting_number': selectedWoodcuttingNumber,
+                        'csrfmiddlewaretoken': '{{ csrf_token }}',
+                    },
+                    success: function(response) {
+                        console.log("Succès de l'envoi:", response);
+                        // Mettre à jour les quantités de forêt et de bois avec les nouvelles valeurs
+                        $("#forest-quantity").text(response.forest_quantity);
+                        $("#wood-quantity").text(response.wood_quantity);
+                    },
+                    error: function(error) {
+                        console.log("Erreur lors de l'envoi:", error);
+                    }
+                });
+
                 $("#woodcutting-popup").hide();
             });
         });
@@ -41,7 +56,7 @@
 
     <h3>Actions :</h3>
     <a href="{% url 'game_action' '1' %}"><button>Planter plus d'arbres</button></a>
-    <a href="{% url 'game_action' '8' %}"><button>couper du bois = usine bois</button></a>
+    <button id="woodcutting-submit">Couper du bois = Usine bois</button>
 
     <p><img src="{% static 'images/ResultatJeu.png' %}" alt="Graphique resultat" width="750px"></p>
 
