--- a/Usine/EcoDycoV1/templates/jeu/game.html
+++ b/Usine/EcoDycoV1/templates/jeu/game.html
@@ -10,6 +10,9 @@
     <h1>Jeu de gestion forestière</h1>
     <p>Quantité de forêt : <span id="forest-quantity">{{ forest_quantity }}</span></p>
     <p>Quantité de bois : <span id="wood-quantity">{{ wood_quantity }}</span></p>
+    <p>Temps d'usure du bois: <span id="temps-usure-bois">{{ temps_usure_bois }}</span></p>
+    <p>Usure R: <span id="usure-r">{{ usure_r }}</span></p>
+
     <!-- Bouton pour ouvrir le pop-up -->
     <button id="open-woodcutting-popup">Couper du bois</button>
 
@@ -43,6 +46,9 @@
                         // Mettre à jour les quantités de forêt et de bois avec les nouvelles valeurs
                         $("#forest-quantity").text(response.forest_quantity);
                         $("#wood-quantity").text(response.wood_quantity);
+                        $("#temps-usure-bois").text(response.temps_usure_bois);
+                        $("#usure-r").text(response.usure_r);
+
                     },
                     error: function(error) {
                         console.log("Erreur lors de l'envoi:", error);
@@ -56,9 +62,6 @@
 
     <h3>Actions :</h3>
     <a href="{% url 'game_action' '1' %}"><button>Planter plus d'arbres</button></a>
-    <button id="woodcutting-submit">Couper du bois = Usine bois</button>
-
-    <p><img src="{% static 'images/ResultatJeu.png' %}" alt="Graphique resultat" width="750px"></p>
-
+    <a href="{% url 'game_action' '2' %}"><button id="woodcutting-submit">Réparer l'usine</button></a>
 </body>
 </html>
